# milemate

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
app/backend/: main.py
app/frontend/: README.md  __init__.py  demo_backend.py  demo_data.py  streamlit_app.py
config/: app.yaml  mcp-hub.yaml  prompts.yaml  scenarios.yaml  sources.yaml  stages.yaml
data/demo_inputs/: checkout_fee.json  cs_triage.json  dispatch.json  eta.json  failed_delivery.json  merchant_prep.json  return_pickup.json  rider_onboarding.json
data/demo_outputs/: README.md
data/synthetic/: README.md
docs/: configuration-notes.md  domain-selection.md  framework-selection.md  implementation-plan.md  last-mile-service-options.md  live-demo-runbook.md  llm-judge-evaluation-checklist.md  next-steps.md  parallel-implementation-plan.md  problem-reframing.md  project-overview.md  test-plan.md  ui-ux-scenario-implementation-plan.md
eval/: README.md  pipeline.py  run_ablation_stages.py  run_all_efforts.py
eval/results/: combined_ablation_summary.md  combined_effort_summary.md
knowledge/cases/: README.md
knowledge/datasets/: README.md
knowledge/docs/: README.md
knowledge/laws/: README.md  legalize-kr-notes.md
presentation/: final-presentation-plan.md
prompts/: README.md
tests/: test_api_routes.py  test_config_loader.py  test_eval_pipeline.py  test_frontend_demo_data.py  test_orchestrator.py  test_prd_packet.py  test_report_schema.py  test_retrieval_adapters.py  test_scenario_profiles.py  test_stage_manager.py  test_streamlit_app.py  test_verifier.py
(+68 files in other folders)
